[package]
name = "haret"
version = "0.1.0"
authors = ["Andrew J. Stone <andrewstone@vmware.com>"]

[dependencies]
libc = "0.1"
rustc-serialize = "0.3"
time = "*"
uuid = "0.1"
rand = "0.3"
rmp-serialize = "0.7"
slog = {version = "1", features = ["max_level_trace"]}
slog-stdlog = "1"
slog-term = "1.1"
slog-envlogger = "0.5"
amy = "0.6"
funfsm = "0.1"
orset = "0.1"
rabble = "0.1"
protobuf = "1.0.24"
vertree = "0.1"
lazy_static = "0.1"

[dev-dependencies]
assert_matches = "1.0"
quickcheck = "0.4"

[[bin]]
name = "haret"
path = "src/bin/haret.rs"
test = false

[[bin]]
name = "haret-admin"
path = "src/bin/haret-admin.rs"
test = false

[[bin]]
name = "haret-cli-client"
path = "src/bin/haret-cli-client.rs"
test = false

[[bin]]
name = "devconfig"
path = "src/bin/devconfig.rs"
test = false
