[package]
name = "haret-server"
version = "0.1.0"
authors = ["Andrew J. Stone <andrewstone@vmware.com>"]
description = "A strongly consistent distributed coordination service"
repository = "https://github.com/vmware/haret"
keywords = ["distributed", "coordination", "strong consistency"]
license = "Apache-2.0"

[dependencies]
haret = { path = ".." }
rabble = "0.4"
slog = {version = "1", features = ["max_level_trace"]}
slog-envlogger = "0.5"
slog-stdlog = "1"
slog-term = "1.1"

[[bin]]
name = "haret"
path = "src/main.rs"
test = false
